[package]
name = "haze-node"
version = "0.1.0"
authors = ["Graham Rushton <gsrushton@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
env_logger = "0.7"
failure = "0.1.7"
haze-core = { path = "../core" }
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.13"
webpki-roots = "0.19"
x25519-dalek = "0.6"
